Adds some styling
- Custom fonts
- Header x Bio
- Better componentization
- Moves src files to src/ folder

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "homepage": "https://lucianohgo.com",
   "scripts": {
     "dev": "next dev",
+    "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "format": "prettier --write '**/*.{js,jsx,json,css}'",
