--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public ."
   },
   "dependencies": {
+    "babel-plugin-prismjs": "^2.0.1",
     "date-fns": "^2.12.0",
     "gray-matter": "^4.0.2",
     "next": "9.3.5",
+    "prismjs": "^1.20.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "remark": "^12.0.0",
-    "remark-html": "^11.0.1"
+    "remark-html": "^11.0.1",
+    "remark-syntax-highlight": "^0.1.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
