--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "remark": "^12.0.0",
     "remark-html": "^11.0.1",
     "remark-slug": "^6.0.0",
-    "remark-syntax-highlight": "^0.1.3"
+    "remark-syntax-highlight": "^0.1.3",
+    "web-vitals": "^0.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
