--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -10,6 +10,8 @@
       "name": "Luciano H. Gomes",
       "avatar_url": "https://avatars3.githubusercontent.com/u/7462600?v=4",
       "profile": "https://github.com/lucianohgo",
+      "twitter": "https://mobile.twitter.com/hg_luciano",
+      "linkedin": "https://www.linkedin.com/in/luciano-holanda-31607867",
       "contributions": [
         "infra",
         "code",
