--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "remark": "^12.0.0",
+    "remark-autolink-headings": "^6.0.0",
     "remark-html": "^11.0.2",
     "remark-slug": "^6.0.0",
     "remark-syntax-highlight": "^0.1.3",
