article: The Super Leader Myth

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -10,7 +10,7 @@
       "name": "Luciano H. Gomes",
       "avatar_url": "https://avatars3.githubusercontent.com/u/7462600?v=4",
       "profile": "https://github.com/lucianohgo",
-      "twitter": "https://mobile.twitter.com/hg_luciano",
+      "twitter": "https://mobile.twitter.com/lucianohgo",
       "linkedin": "https://www.linkedin.com/in/luciano-holanda-31607867",
       "contributions": [
         "infra",
