--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "gray-matter": "^4.0.2",
     "next": "^10.0.9",
     "prismjs": "^1.21.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "remark": "^12.0.1",
     "remark-autolink-headings": "^6.0.1",
     "remark-html": "^12.0.0",
