--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "remark-autolink-headings": "^6.0.1",
     "remark-html": "^12.0.0",
     "remark-slug": "^6.0.0",
-    "remark-syntax-highlight": "^0.1.3",
-    "web-vitals": "^0.2.4"
+    "remark-syntax-highlight": "^0.1.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
