--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "remark-syntax-highlight": "^0.1.3"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
+    "@babel/eslint-parser": "^7.5.4",
     "eslint": "^8.9.0",
     "eslint-plugin-react": "^7.28.0",
     "husky": "^4.2.5",
@@ -44,7 +44,7 @@
   },
   "lint-staged": {
     "**/*.{js,jsx,json,css}": [
-      "yarn format"
+      "npm run format"
     ]
   }
 }
