--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.5.4",
+    "@babel/core": "7.11.0",
     "eslint": "^8.9.0",
     "eslint-plugin-react": "^7.28.0",
     "husky": "^4.2.5",
